--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-azure-ad-auth-redux"
-version = "1.5.20"
+version = "1.5.24"
 description="Authenticate users using Azure Active Directory."
 authors = ["Scott Sharkey <scott.sharkey@rsginc.com>"]
 license = "MIT"
@@ -24,6 +24,7 @@ classifiers = [
         "Programming Language :: Python :: 3",
         "Programming Language :: Python :: 3.10",
         "Programming Language :: Python :: 3.11",
+        "Programming Language :: Python :: 3.12",
         "Topic :: Software Development",
 ]
 include = [
@@ -31,7 +32,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = ">=3.10,<3.13"
 pyjwt = "^2.8.0"
 cryptography = "^41.0.2"
 lxml = "^4.9.3"
@@ -41,7 +42,7 @@ requests = "^2.31.0"
 pre-commit = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
-poetry = "^1.3.2"
+poetry = "^1.8.2"
 icecream = "^2.1.3"
 mock = "^5.0.1"
 pylint = "^2.15.10"
