--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
         run: uv sync --all-groups --all-extras
 
       - name: Build Wheel
-        run: uv Build
+        run: uv build
 
       - name: Publish Package
         run: uv publish --trusted-publishing always
